# puppet-openstack-specs

./: .gitignore  .gitreview  HACKING.rst  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
specs/: common-openstack-configuration-provider.rst  common-openstack-identity-resource.rst  extras-repository-refactor.rst  template_temp.rst  use-aviator-in-module-resources.rst
specs/5.0.0/: pacemaker-provider-for-openstack.rst
specs/icehouse/: common-openstack-configuration-provider.rst  common-openstack-database-resource.rst  common-openstack-identity-resource.rst  use-aviator-in-module-resources.rst
specs/juno/: use-openstackclient-in-aviator-resources.rst
specs/kilo/: api-v3-support.rst  auth-restructure.rst  master-policy.rst
specs/liberty/: enabling-federation.rst  support-for-keystone-domain-configuration.rst
specs/mitaka/: config-deprecation-for-inifile-provider.rst
tests/: test_titles.py
